--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -51,3 +51,17 @@
     background-color: #3D464D;
     color: #ffc107;
 }
+
+.blurDiv
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  
+}
+.blurDivParent
+{
+  position: relative;
+}
